--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,18 @@
 	<groupId>com.ggar</groupId>
 	<version>5.0-SNAPSHOT</version>
 	<artifactId>altair</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>com.magc.sensecane</groupId>
+			<artifactId>framework</artifactId>
+			<version>5.0-SNAPSHOT</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.31.1</version>
+		</dependency>
+
+	</dependencies>
 </project>
